Add references related to PPG

--- a/ref.bib
+++ b/ref.bib
@@ -100,3 +100,40 @@ title = {{DroidFuzzer}},
 url = {http://dl.acm.org/citation.cfm?doid=2536853.2536881},
 year = {2013}
 }
+@article{cui1990vivo,
+  title={In vivo reflectance of blood and tissue as a function of light wavelength},
+  author={Cui, Weijia and Ostrander, Lee E and Lee, Bok Y},
+  journal={IEEE transactions on biomedical engineering},
+  volume={37},
+  number={6},
+  pages={632--639},
+  year={1990},
+  publisher={IEEE}
+}
+@inproceedings{horiguchi2012motion,
+  title={Motion artifact compensation for wristwatch type photoplethysmography sensor},
+  author={Horiguchi, Daisuke and Naito, Hiroki and Sasaki, Ken},
+  booktitle={Key Engineering Materials},
+  volume={523},
+  pages={639--644},
+  year={2012},
+  organization={Trans Tech Publ}
+}
+@article{mashhadi2016heart,
+  title={Heart Rate Tracking using Wrist-Type Photoplethysmographic (PPG) Signals during Physical Exercise with Simultaneous Accelerometry},
+  author={Mashhadi, Mahdi Boloursaz and Asadi, Ehsan and Eskandari, Mohsen and Kiani, Shahrzad and Marvasti, Farokh},
+  journal={IEEE Signal Processing Letters},
+  volume={23},
+  number={2},
+  pages={227--231},
+  year={2016},
+  publisher={IEEE}
+}
+@misc{AFE4404datasheet,
+  title={AFE4404 Ultra-Small, Integrated AFE for Wearable, Optical, Heart-Rate Monitoring and Bio-Sensing},
+  author={Texas Instrument},
+  year={2016},
+  publisher={Texas Instrument},
+  url={http://www.ti.com/lit/ds/symlink/afe4404.pdf}
+}
+
