Update on Overleaf.

--- a/ref.bib
+++ b/ref.bib
@@ -136,4 +136,135 @@ year = {2013}
   publisher={Texas Instrument},
   url={http://www.ti.com/lit/ds/symlink/afe4404.pdf}
 }
-
+@misc{AFE4404dev,
+  title={AFE4404 Development Guide},
+  author={Texas Instrument},
+  year={2015},
+  publisher={Texas Instrument},
+  url={http://www.ti.com/lit/ug/slau621a/slau621a.pdf}
+}
+@misc{NJL5513Rdatasheet,
+  title={Biomonitoring Sensor with Red \& IR \& Two Green LEDs},
+  author={JRC},
+  year={2016},
+  publisher={JRC},
+  url = {http://www.njr.com/semicon/PDF/NJL5513R\_E.pdf}
+}
+@misc{IDC2016PhoneMarket,
+   title={Smartphone OS Market Share, 2016 Q2},
+   author={Android Studio},
+   year={2016},
+   url={https://www.idc.com/prodserv/smartphone-os-market-share.jsp}
+}
+@misc{AndroidUITester,
+   title={UI/Application Exerciser Monkey},
+   author={Android Studio},
+   year={2016},
+   url={https://developer.android.com/studio/test/monkey.html}
+}
+@online{AppleHeartRate2015,
+   title={Your heart rate. What it means, and where on Apple Watch you’ll find it.},
+   author={Apple},
+   year={2015},
+   urldate={2015-05-30},
+   url={https://web-beta.archive.org/web/20150608143125/https://support.apple.com/en-us/HT204666}
+}
+@online{TomGuideHRComparison2015,
+   title={Who Has The Most Accurate Heart Rate Monitor?},
+   publisher={Tom's Guide},
+   author={Mike Prospero},
+   year={2015},
+   url={http://www.tomsguide.com/us/heart-rate-monitor,review-2885.html}
+}
+@online{BestAW2016,
+   title={Best Android Wear watches},
+   author={Android Authority},
+   year={2016},
+   urldate={2016-12-11},
+   url={http://www.androidauthority.com/best-android-watches-572773/}
+}
+@online{GooglFitness,
+  title={Google Fit - Fitness Tracking},
+  url={https://play.google.com/store/apps/details?id=com.google.android.apps.fitness}
+}
+@online{HearRateOs,
+  title={Heart Rate OS - Android Watch},
+  url={https://play.google.com/store/apps/details?id=com.jwork.wearable.heartratesync2}
+}
+@online{SensorDashBoard,
+  title={Sensor Dashboard},
+  url={https://play.google.com/store/apps/details?id=com.github.pocmo.sensordashboard}
+}
+@online{MotoBody,
+  title={Motorola - Moto Body},
+  url={https://play.google.com/store/apps/details?id=com.motorola.omni}
+}
+@misc{IDC2016WearableQ3
+   title={IDC Worldwide Quarterly Wearable Device Tracker, October 24, 2016},
+   author={IDC},
+   year={2016},
+   url={https://www.idc.com/getdoc.jsp containerId=prUS41875116}
+}
+@misc{SantamedicalSM165,
+   title={Santa Medical Pulse Oximeter SM-165 Datasheet},
+   author={Santa Medical},
+   url={http://gurinproducts.com/wp-content/uploads/2015/02/SM-165-Manual.pdf}
+}
+@inproceedings{mohamed2016smashed,
+  title={SMASheD: Sniffing and Manipulating Android Sensor Data},
+  author={Mohamed, Manar and Shrestha, Babins and Saxena, Nitesh},
+  booktitle={Proceedings of the Sixth ACM Conference on Data and Application Security and Privacy},
+  pages={152--159},
+  year={2016},
+  organization={ACM}
+}
+@inproceedings{couceiro2014detection,
+  title={Detection of motion artifacts in photoplethysmographic signals: Algorithms comparison},
+  author={Couceiro, R and Carvalho, Paulo and Paiva, RP and Henriques, J and Quintal, I and Muehlsteff, J},
+  booktitle={The International Conference on Health Informatics},
+  pages={327--330},
+  year={2014},
+  organization={Springer}
+}
+@article{santos2012accelerometer,
+  title={Accelerometer-assisted PPG measurement during physical exercise using the LAVIMO sensor system},
+  author={Santos, Susana Aguiar and Venema, Boudewijn and Leonhardt, Steffen},
+  journal={Acta Polytechnica},
+  volume={52},
+  number={5},
+  year={2012}
+}
+@inproceedings{kim2007adaptive,
+  title={Adaptive noise cancellation using accelerometers for the PPG signal from forehead},
+  author={Kim, Sang Hyun and Ryoo, Dong Wan and Bae, Changseok},
+  booktitle={2007 29th Annual International Conference of the IEEE Engineering in Medicine and Biology Society},
+  pages={2564--2567},
+  year={2007},
+  organization={IEEE}
+}
+@inproceedings{lee2013comparison,
+  title={Comparison between red, green and blue light reflection photoplethysmography for heart rate monitoring during motion},
+  author={Lee, Jihyoung and Matsumura, Kenta and Yamakoshi, Ken-ichi and Rolfe, Peter and Tanaka, Shinobu and Yamakoshi, Takehiro},
+  booktitle={2013 35th annual international conference of the IEEE engineering in medicine and biology society (EMBC)},
+  pages={1724--1727},
+  year={2013},
+  organization={IEEE}
+}
+@inproceedings{lin2015heart,
+  title={Heart rate estimation using wrist-acquired photoplethysmography under different types of daily life motion artifact},
+  author={Lin, Zhe and Zhang, Jin and Chen, Yanjiao and Zhang, Qian},
+  booktitle={2015 IEEE International Conference on Communications (ICC)},
+  pages={489--494},
+  year={2015},
+  organization={IEEE}
+}
+@article{tamura2014wearable,
+  title={Wearable photoplethysmographic sensors—past and present},
+  author={Tamura, Toshiyo and Maeda, Yuka and Sekine, Masaki and Yoshida, Masaki},
+  journal={Electronics},
+  volume={3},
+  number={2},
+  pages={282--302},
+  year={2014},
+  publisher={Multidisciplinary Digital Publishing Institute}
+}
